# your_game_of_life

./: Cargo.toml  LICENSE  README.md
src/: cell.rs  lib.rs
